compiler/testData/javaModules/unnamedDependsOnNamed/moduleB.txt
compiler/testData/javaModules/unnamedDependsOnNamed/moduleB/usage.kt:2:17: error: symbol is declared in module 'moduleA' which does not export package 'foo.impl'
import foo.impl.Impl
                ^^^^
compiler/testData/javaModules/unnamedDependsOnNamed/moduleB/usage.kt:7:5: error: symbol is declared in module 'moduleA' which does not export package 'foo.impl'
    Impl()  // should be error
    ^^^^
COMPILATION_ERROR
